# emojiopticon

./: .gitignore  Cargo.toml  makefile
config/: prompts.toml
data/: frequencies.json
deploy/: emojiopticon.logrotate  emojiopticon.service
src/: analysis.rs  app.rs  cli.rs  main.rs  prompts.rs  tui.rs
