[package]
name = "bsky-frequency-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.24.8"
colored = "2.1.0"
crossterm = "0.28.1"
jetstream-oxide = "0.1.0"
tokio = { version = "1.41.1", features = ["full", "sync"] }
unicode-segmentation = "1.12.0"
ratatui = { version = "0.23" }
futures = "0.3"
async-openai = "0.26.0"
dotenv = "0.15.0"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5.21", features = ["derive"] }
hotreload = "0.2.2"
serde_json = "1.0.133"
